--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 PORT=3000
 MONGODB_URL=mongodb+srv://<username>:<password>@auth.f030p.mongodb.net/?retryWrites=true&w=majority&appName=auth
+ACCESS_TOKEN_SECRET=
+REFRESH_TOKEN_SECRET=
